--- a/package.json
+++ b/package.json
@@ -9,8 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.21.1",
+    "bcrypt": "^5.1.1",
+    "jose": "^5.9.3",
+    "json": "^11.0.0",
+    "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.13"
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.3.0",
+    "react-id-generator": "^3.0.2",
+    "sass": "^1.79.4",
+    "zod": "^3.23.8"
   }
 }
