--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "antd": "^5.21.1",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.3",
+    "antd": "^5.21.3",
     "bcrypt": "^5.1.1",
     "jose": "^5.9.3",
     "json": "^11.0.0",
+    "multer": "^1.4.5-lts.1",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
